[gd_scene load_steps=3 format=3 uid="uid://dl1shq1p0uaq8"]

[ext_resource type="Script" uid="uid://cmqdpq5sqt7dv" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://ba2hi0umofv6w" path="res://scenes/fade.tscn" id="2_ekxnf"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="Fade" parent="." instance=ExtResource("2_ekxnf")]
top_level = true

[node name="Fade Timer" type="Timer" parent="Fade"]

[node name="Buttons" type="Control" parent="."]
z_index = 597
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 8

[node name="Start" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -253.0
offset_right = 284.82983
offset_bottom = -137.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Version Notes" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.016666668
anchor_top = 0.26666668
anchor_right = 0.1625
anchor_bottom = 0.32592592
offset_left = 741.0
offset_top = 138.5
offset_right = 933.0
offset_bottom = 186.5
text = "Version Notes"
metadata/_edit_use_anchors_ = true

[node name="Credits" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 773.0
offset_top = 562.5
offset_right = 1245.0
offset_bottom = 682.5
text = "Credits"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 773.0
offset_top = 706.5
offset_right = 1245.0
offset_bottom = 818.5
text = "Quit"

[connection signal="timeout" from="Fade/Fade Timer" to="." method="_on_fade_timer_timeout"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Version Notes" to="." method="_on_version_notes_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
